<resources>
    <string name="app_name">地约</string>

    <string name="account_login_title">登录</string>
    <string name="account_login_edit_phone_hint">请输入手机号</string>
    <string name="account_login_edit_password_hint">请输入密码</string>
    <string name="account_login_edit_code_hint">请输入验证码</string>
    <string name="account_login_get_phone_code">获取验证码</string>
    <string name="verificationcode_post_reset">%ds</string>

    <string name="title_main">发布土地</string>

    <string name="toast_clickExit">再按一下退出程序</string>

    <string name="dialog_cancle">取消</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_set">设置</string>
    <string name="dialog_reset_title">重置经纬度？</string>
    <string name="dialog_del_market_title">确定删除该经纬度吗？</string>
    <string name="dialog_input_market_title">输入经纬度</string>
    <string name="dialog_permission_title">权限设置</string>
    <string name="dialog_logout_title">退出登陆</string>

    <string name="tudi_area">流转区域:</string>
    <string name="tudi_type">流转方式:</string>
    <string name="tudi_size">流转面积:</string>
    <string name="tudi_phone">土地所有人手机:</string>
    <string name="tudi_name">土地所有人姓名:</string>
</resources>
